[package]
name = "vk_engine"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
raw-window-handle = "0.5"
ash = "0.37"
ash-window = "0.12"
cstr = "0.2"
shaderc = {version = "0.8", optional = true}
glam = { version = "0.24" }

[features]
shader_compilation = ["dep:shaderc"]
